	always claimed.

    o	update.packages("mgcv") and old.packages(*) now give a better error
	message; and installed.packages("mgcv") properly returns <empty>.

    o	stats:::as.dendrogram.hclust() is documented and no longer re-sorts
	the two children at each node.	This fixes as.dendrogram(hh) for
	the case where hh is a "reordered" hclust object.

    o	heatmap(*, labRow=., labCol=.) now also reorders the labels when
	specified---not only when using default labels.

    o   Copying lattice (grid) output to another device now works again
        (There were intermittent problems in 1.9.0 - PR#6915, #6947/8.)  

    o	hist() uses a more robust choice of its 'diddle' factor, used
	to detect if an observation is on a bin boundary.  (PR#6931)

    o	jitter(x) now returns x when length(x) == 0.

    o	Under some rare circumstances the locale-specific tables used by
	the perl=TRUE option to grep etc were being corrupted and so 
	matches were missed.



		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.

    o	Package 'base' has been split into packages 'base', 'graphics',
	'stats' and 'utils'.  All four are loaded in a default
	installation, but the separation allows a 'lean and mean'
	version of R to be used for tasks such as building indices.

	Packages ctest, eda, modreg, mva, nls, stepfun and ts have been
	merged into stats, and lqs has been returned to MASS.  In all
	cases a stub has been left that will issue a warning and ensure
	that the appropriate new home is loaded.  All the time series
	datasets have been moved to package stats.  Sweave has been
	moved to utils.

	Package mle has been moved to stats4 which will become the
	central place for statistical S4 classes and methods
	distributed with base R.  Package mle remains as a stub.
